Intro + Equality Lab: Made the border a bit thicker to match the filled shapes
# 0.00.89 (65250) Jun 18, 2012
Fraction Builder: Scale all graphics up so they have the same width
Fraction Builder: Fixed: Buggy behavior when dropping a fraction on 2 matching targets
Fraction Builder: Added Level 10
Fraction Builder: Added Level 9
Fraction Builder: Added Level 8
Fraction Builder: Added Level 7
Fraction Builder: Added Level 6
Fraction Builder: Made background light blue
Fraction Builder: Added a background color chooser
Fraction Builder: Added levels
Fraction Builder: Added levels 1-2
Fraction Builder: Added a "Resample" button for debugging, only enabled when running in dev mode
Fraction Builder: Randomize levels after "reset all" pressed
Fraction Builder: Removed "My Fractions" text
Fraction Builder: Use toggle buttons + icons for "pictures" and "numbers" radio buttons
# 0.00.88 (65186) Jun 17, 2012
Fraction Builder: Added a little more vertical spacing between scoring cells
Fraction Builder: Added a little more vertical space between "my fractions" and the scoring cells
Fraction Builder: When ejecting a fraction from the scoring cell, all the parts go back to the toolbox
Fraction Builder: Removed score readout
Fraction Builder: Have vertical bars fill in from the left
Fraction Builder: Fixed: "Next" button font under smilie face is too small
Fraction Builder: Fixed: Cards should stack down and to the right instead of up and to the left
Fraction Builder: Fixed: Composite fraction card wrong size unless window at 1024x768
# 0.00.87 (65174) Jun 16, 2012
Fraction Matcher: fixed randomization scheme for later levels
Fraction Matcher: Exclude "interleaved L shapes" for denominator > 4
Fraction Matcher: Moved mixed number elements closer together
# 0.00.86 (65170) Jun 16, 2012
Fraction Matcher: Fixed: Sometimes when pressing "show answer", a fraction from the top score cell animates down to the scale